fixed dark mode and other styling issues

--- a/notifier-pwa/src/app/modules/home/dashboard/dashboard.page.scss
+++ b/notifier-pwa/src/app/modules/home/dashboard/dashboard.page.scss
@@ -3,7 +3,9 @@ page-home-dashboard {
         --padding-bottom: 80px;
 
         ion-item {
-            --padding-start: 10px;
+            --padding-start: 0;
+            --padding-inline-end: 0;
+            --inner-padding-end: 0;
         }
     }
 }
