--- a/notifier-pwa/src/theme/variables.scss
+++ b/notifier-pwa/src/theme/variables.scss
@@ -74,6 +74,9 @@
   --ion-color-light-contrast-rgb: 0, 0, 0;
   --ion-color-light-shade: #d7d8da;
   --ion-color-light-tint: #f5f6f9;
+
+  /** custom **/
+  --color-notification-item-alt: #f7f7f7;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -145,6 +148,9 @@
     --ion-color-light-contrast-rgb: 255,255,255;
     --ion-color-light-shade: #1e2023;
     --ion-color-light-tint: #383a3e;
+
+    /** custom **/
+    --color-notification-item-alt: #424242;
   }
 
   /*
